[package]
name = "rust-shortest-path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
fast_paths = "0.2.0"
clap = { version = "3.1.8", features = ["derive"] }
pathfinding = "3.0.11"